--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write \"**/*.{ts,tsx,json,html,yaml,css}\""
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.7",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
