--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request' || !startsWith(github.event.pull_request.head.ref, 'renovate/')
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -19,6 +20,7 @@ jobs:
         run: npm run lint
   build:
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request' || !startsWith(github.event.pull_request.head.ref, 'renovate/')
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
