--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
+    "@mui/icons-material": "^5.15.7",
     "@mui/material": "5.15.7",
     "leaflet": "1.9.4",
     "react": "18.2.0",
