--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
   "labels": ["dependencies"],
-  "schedule": ["* * 21 * *"],
+  "schedule": ["* * {5,15,25} * *"],
   "lockFileMaintenance": {
     "enabled": true
   },
